[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/PlayerDriver.gd" type="Script" id=1]
[ext_resource path="res://asset/character/carrotated.png" type="Texture" id=2]
[ext_resource path="res://asset/sounds/Driving Startup.mp3" type="AudioStream" id=3]
[ext_resource path="res://asset/sounds/Driving_Shutdown.mp3" type="AudioStream" id=4]
[ext_resource path="res://asset/character/Lights_ON_002.png" type="Texture" id=5]
[ext_resource path="res://asset/sounds/Gun_Shot.mp3" type="AudioStream" id=6]
[ext_resource path="res://asset/sounds/Crash.mp3" type="AudioStream" id=7]
[ext_resource path="res://asset/sounds/Drift.mp3" type="AudioStream" id=8]
[ext_resource path="res://asset/sounds/Reload.mp3" type="AudioStream" id=9]
[ext_resource path="res://asset/sounds/Driving.mp3" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 119.999, 260.001 )

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[sub_resource type="Theme" id=4]

[node name="KinematicBody2D" type="KinematicBody2D" groups=["players"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0

[node name="DrivingSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
pitch_scale = 1.3
__meta__ = {
"_editor_description_": ""
}

[node name="DrivingStartupPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 1.3

[node name="DrivingShutdownPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
pitch_scale = 1.3

[node name="GunShotSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="CollisionSoundPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 90, 4.5 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
stream = ExtResource( 7 )

[node name="DriftSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="ReloadSoundPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 7.62939e-06, 0 )
scale = Vector2( 1, 1 )
stream = ExtResource( 9 )
volume_db = 4.0
pitch_scale = 0.8

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 90, -4.5 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 90, 4.5 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Crash" type="Area2D" parent="."]
position = Vector2( 90, 4.5 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crash"]
position = Vector2( -44.9967, 900 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 3 )

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color( 0.219608, 1, 0, 1 )
material = SubResource( 5 )
margin_left = -39.0
margin_top = 15.0
margin_right = 40.0
margin_bottom = 32.0
theme = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.792157, 0, 0, 1 )
max_value = 10.0
value = 10.0
percent_visible = false

[connection signal="body_entered" from="Crash" to="." method="_on_Crash_body_entered"]
